apps/open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  namespace: open-webui
spec:
  selector:
    app: open-webui
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
